[package]
edition = "2021"
name = "baml-typescript-ffi"
version = "0.0.1"

[lib]
name = "baml"
crate-type = ["cdylib"]

[lints.rust]
unused_imports = "allow"
unused_variables = "allow"

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"

[target.aarch64-unknown-linux-musl]
linker = "aarch64-linux-musl-gcc"

[dependencies]
anyhow.workspace = true
baml-cli.workspace = true
baml-types = { path = "../baml-lib/baml-types" }
baml-runtime = { path = "../baml-runtime", features = ["internal"] }
env_logger.workspace = true
futures.workspace = true
indexmap.workspace = true
internal-baml-codegen.workspace = true
log.workspace = true
napi = { version = "2", features = [
  "anyhow",
  "async",
  "napi5",
  "serde-json",
  "tokio_rt",
] }
napi-derive = "2"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }

[build-dependencies]
napi-build = "2.1.3"
