[tool.poetry]
name = "fiddle"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"
packages = [{ include = "." }]


[tool.poetry.dependencies]
python = "^3.8"
baml = "^0.17.1"
flask = "^3.0.2"
flask-cors = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
