[tool.poetry]
name = "python-project"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.8"
# Use client in production
# baml = "^0.14.1"
baml = {path = "../../clients/python", develop = true}
ruff = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
