[tool.poetry]
name = "python-project"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.8"
# Use client in production
# baml = "^0.14.1"
baml = {version = "^0.19.0.dev5", allow-prereleases = true}
ruff = "^0.3.3"
maturin = "^1.5.1"

# After poetry install run this:
# env -u CONDA_PREFIX poetry run maturin develop --manifest-path ../../clients/python-ffi/Cargo.toml

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
