[tool.poetry]
name = "integ-tests2-python"
version = "0.1.0"
description = ""
authors = ["Sam Lijin <sam@boundaryml.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.1"


[tool.poetry.group.dev.dependencies]
maturin = {extras = ["patchelf"], version = "^1.5.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
