[tool.poetry]
name = "example"
version = "0.1.1"
description = ""
authors = ["Vaibhav Gupta <vbv@gloo.chat>"]
readme = "README.md"

[[tool.poetry.packages]]
include = "app"
from = "."

[[tool.poetry.packages]]
include = "baml_client"
from = "."

[[tool.poetry.packages]]
include = "tests"
from = "."

[tool.poetry.dependencies]
python = "^3.8"
baml = { path = "../../../clients/python", develop = true }
mypy = "^1.5.1"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
