[package]
edition = "2021"
name = "internal-baml-core"
version.workspace = true
authors.workspace = true
description.workspace = true
license-file.workspace = true

[dependencies]
internal-baml-diagnostics = { path = "../diagnostics", version = "0.1.1-canary.2" }
internal-baml-schema-ast = { path = "../schema-ast", version = "0.1.1-canary.2" }
internal-baml-parser-database = { path = "../parser-database", version = "0.1.1-canary.2" }
internal-baml-prompt-parser = { path = "../prompt-parser", version = "0.1.1-canary.2" }
serde.workspace = true
serde_json.workspace = true
enumflags2 = "0.7"
rayon = "1.8.0"
handlebars = "4.4.0"
log = "0.4.20"
chrono = "0.4.31"
whoami = "1.4.1"
textwrap = "0.16.0"
either = "1.6.1"
strsim = "0.10.0"


[dev-dependencies]
base64 = "0.13.0"
dissimilar = "1.0.4"
expect-test = "1.1.0"
indoc.workspace = true
either = "1.8.1"

[features]
use-pyo3 = ["internal-baml-parser-database/use-pyo3"]
