[package]
edition = "2021"
name = "internal-baml-core"
version.workspace = true
authors.workspace = true
description.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
baml-types = { path = "../baml-types" }
chrono = "0.4.31"
derive_builder.workspace = true
either.workspace = true
enumflags2 = "0.7"
handlebars = "4.4.0"
log = "0.4.20"
indexmap.workspace = true
internal-baml-diagnostics = { path = "../diagnostics" }
internal-baml-jinja.workspace = true
internal-baml-parser-database = { path = "../parser-database" }
internal-baml-prompt-parser = { path = "../prompt-parser" }
internal-baml-schema-ast = { path = "../schema-ast" }
rayon = "1.8.0"
regex = "1.10.3"
semver = "1.0.20"
serde.workspace = true
serde_json.workspace = true
shellwords = "1.1.0"
strsim = "0.10.0"
strum.workspace = true
textwrap = "0.16.0"
whoami = "1.4.1"


[dev-dependencies]
base64 = "0.13.0"
dissimilar = "1.0.4"
expect-test = "1.1.0"
indoc.workspace = true
either = "1.8.1"
