[package]
edition = "2021"
name = "baml-lib"
version.workspace = true
authors.workspace = true
description.workspace = true

license-file.workspace = true

[dependencies]
internal-baml-core = { path = "../baml-core", version = "0.1.1-canary.0" }


[dev-dependencies]
pretty_assertions = "1.4.0"
base64 = "0.13.0"
dissimilar = "1.0.4"
expect-test = "1.1.0"
indoc.workspace = true
either = "1.8.1"
strip-ansi-escapes = "0.2.0"

[features]
use-pyo3 = ["internal-baml-core/use-pyo3"]
