[package]
edition = "2021"
name = "internal-baml-diagnostics"
version.workspace = true
authors.workspace = true
description.workspace = true

license-file.workspace = true

[dependencies]
colored = "2"
pest = { version = "2.1.3", default-features = false }
indoc.workspace = true
log = "0.4.20"
strsim = "0.10.0"
